Changes for Perl extension Test-SubCalls

1.09      2009-04-19
	- Upgrading to Module::Install::DSL 0.83

1.08      2008-08-22
	- No functional changes
	- Upgrading to Module::Install 0.77
	- Minor tweaky refactorings

1.07      2007-11-16
	- No functional changes
	- Upgrading to Module::Install 0.68

1.06      2006-05-12
	- Moving to a stable version number
	- Upgrading to Module::Install 0.62 final
	- Removing auto_install

0.05      2006-04-24
	- Apparently my tweaking of the dependencies was incorrect.
	- Removed the Test::Simple dep, the T:B:Tester one should be enough
	- Minor pod change

0.04      2006-04-23
	- Moved from SourceForge CVS to new collaborative SVN repository
	- Upgraded Module::Install to 0.62

0.03      2005-12-30
	- Noted version dependency is actually 5.006
	  (This is ONLY because of Lex::HookWrap)

0.02      2005-10-08
	- Upgraded Test::Builder::Tester dependency

0.01      2005-09-01
	- Created the initial version of the module