@@ -1,0 +1,16 @@
+name                = Test-SubCalls
+author              = Adam Kennedy <adamk@cpan.org>
+copyright_holder    = Adam Kennedy
+copyright_year      = 2005
+license             = Perl_5
+abstract            = Track the number of times subs are called
+
+[@Author::ETHER]
+:version = 0.119
+installer = MakeMaker
+Authority.authority = cpan:ADAMK
+-remove = PodWeaver
+-remove = Test::EOL         ; TODO
+-remove = Test::NoTabs      ; TODO
+
+[PodVersion]
